<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bitbylogic.android.workoutapp.LiftsInfoActivity">
    <item android:id="@+id/action_reset" android:title="@string/action_reset"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_lifts" android:title="@string/action_lifts"
        android:orderInCategory="70" android:showAsAction="never" />
    <item android:id="@+id/action_program" android:title="@string/action_program"
        android:orderInCategory="60" android:showAsAction="never" />
    <item android:id="@+id/action_progress" android:title="@string/action_progress"
        android:orderInCategory="80" android:showAsAction="never" />
    <item android:id="@+id/action_reconcile" android:title="@string/action_reconcile"
        android:orderInCategory="90" android:showAsAction="never" />
    <item android:id="@+id/action_theme" android:title="@string/action_theme"
        android:orderInCategory="85" android:showAsAction="never" />
</menu>
